feat: adopt data envelope for all responses and add version pagination
